# sentiment-analyst

./: Makefile  README.md
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_interaction_audio_file_key.py  0003_add_pending_draft_unique_index.py  0004_add_generation_failures.py
backend/app/: main.py  worker_entrypoint.py
backend/app/agents/: __init__.py
backend/app/agents/generation/: __init__.py  adaptors.py
backend/app/api/v1/: advisors.py  audio.py  clients.py  generation.py  health.py  interactions.py  message_drafts.py  router.py  scheduler.py
backend/app/core/: config.py  exceptions.py  llm_provider.py  logging.py  message_queue.py  middleware.py  opensearch.py  prompts.py  telemetry.py
backend/app/db/: session.py
backend/app/dependencies/: __init__.py  db.py  llm.py  queue.py
backend/app/models/: __init__.py  advisor.py  client.py  client_context.py  financial_profile.py  generation_failure.py  interaction.py  message_draft.py
backend/app/repositories/: __init__.py  advisor.py  client.py  client_context.py  financial_profile.py  generation_failure.py  interaction.py  message_draft.py
backend/app/schemas/: __init__.py  advisor.py  audio.py  client.py  client_context.py  context_assembly.py  extraction.py  financial_profile.py  generation.py  interaction.py  message_draft.py
backend/app/services/: __init__.py  advisor_service.py  client_service.py  context_assembly.py  extraction.py  generation_service.py  generation_worker.py  inmemory_queue.py  interaction_service.py  llm_audit.py  message_draft_service.py  ollama_provider.py  redis_queue.py  scheduler.py  storage.py  transcription.py
backend/tests/api/v1/: conftest.py  test_advisors.py  test_audio.py  test_clients.py  test_generation.py  test_health.py  test_message_drafts.py  test_metrics.py
backend/tests/core/: test_middleware.py  test_telemetry.py
backend/tests/prompts/: test_extraction_prompt.py  test_generation_prompt.py
backend/tests/prompts/fixtures/: expected_tags.json  sample_transcript.txt
backend/tests/services/: conftest.py  test_context_assembly.py  test_extraction.py  test_generation_service.py  test_generation_worker.py  test_inmemory_queue.py  test_message_draft_service.py  test_ollama_provider.py  test_redis_queue.py  test_scheduler.py  test_storage.py
docos/: adr-agent-sdk.md  architecture.md  erd.md  opensearch-dashboards-setup.md  opensearch-mapping-optimization.md
frontend/assistant/: README.md  pubspec.yaml
frontend/assistant/ios/Runner/: Info.plist
frontend/assistant/ios/Runner.xcodeproj/: project.pbxproj
frontend/assistant/lib/: app.dart  main.dart
frontend/assistant/lib/core/: api_client.dart  config.dart  exceptions.dart
frontend/assistant/lib/models/: client.dart  draft.dart
frontend/assistant/lib/providers/: capture_providers.dart
frontend/assistant/test/: widget_test.dart
frontend/assistant/web/: index.html
infra/: .env.example  README.md  docker-compose.yml
infra/fluent-bit/: fluent-bit.conf  parsers.conf
infra/opensearch/: Dockerfile
infra/postgres/: seed.sql
infra/prometheus/: prometheus.yml
libs/agent_sdk/: README.md  pyproject.toml
libs/agent_sdk/agent_sdk/: __init__.py  config.py
libs/agent_sdk/agent_sdk/agents/: __init__.py
libs/agent_sdk/agent_sdk/agents/generation/: __init__.py  ports.py  prompts.py  scheduler.py  service.py  worker.py
libs/agent_sdk/agent_sdk/audit/: __init__.py  logger.py  models.py  noop.py
libs/agent_sdk/agent_sdk/core/: contracts.py  exceptions.py  llm_provider.py  message_queue.py  session.py
libs/agent_sdk/agent_sdk/dependencies/: __init__.py  factories.py
libs/agent_sdk/agent_sdk/orchestration/: __init__.py  scheduler.py  worker.py
libs/agent_sdk/agent_sdk/providers/: __init__.py
libs/agent_sdk/agent_sdk/providers/llm/: __init__.py  ollama.py
libs/agent_sdk/agent_sdk/providers/queue/: __init__.py  inmemory.py  redis.py
libs/agent_sdk/tests/: test_contracts.py  test_orchestration.py
(+15 files in other folders)
